--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tilt+Neon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/pokeball.png" />
 </head>
 <body>
+    <div class="titulo"><span>Pokedex</span></div>
     <img class="img-pokedex" src="../img/pokedex.png" alt="Imagen de la Pokedex" >
-    <p>hola</p>
+    <br>
+    <br>
+    <a class="link" href="./mew.html">Mew</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
 </body>
 </html>
